# CppLearning

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  README.md  SUBMODULES.md
.github/workflows/: release.yml
AtmosphericCalculator/: main.cpp
FlightDynamics/: CMakeLists.txt  test_sdl.cpp
FlightDynamics/src/: aero.hpp  atmosphere.hpp  main.cpp  main_gui.cpp  vec2.hpp
FlightDynamics/tests/: aero_tests.cpp  integrator_tests.cpp
config/: AERO_DATA.md  aero_default.csv  aircraft_config.json
src/: aero.cpp  atmosphere.cpp  integrator.cpp  integrator.hpp  main.cpp  main_gui.cpp  pid.cpp  pid.hpp
src/aerodynamics/: aero.cpp  aero.hpp  aero_data.hpp
src/aircraft/: aircraft.hpp  aircraft_loader.hpp
src/graphics/: ui_panels.hpp
src/simulation/: physics_update.hpp  simulation_state.hpp
tests/: atmos_tests.cpp  pid_tests.cpp
